applications/openlookeng-repo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-repo
  name: openlookeng-repo
