applications/openlookeng-repo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header Strict-Transport-Security "max-age=31536000";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-Cache-Status $upstream_cache_status;
      add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'unsafe-inline' *.googletagmanager.com *.baidu.com busuanzi.ibruce.info api.ip.sb cdn.jsdelivr.net;object-src 'none';frame-ancestors 'self'";
  name: openlookeng-repo-ingress
spec:
  tls:
    - hosts:
        - download.openlookeng.io
      secretName: openlookeng-repo-tls
  rules:
    - host: download.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-repo-internal
              servicePort: 80
            path: /
